--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,14 @@
     <string name="app_name">Login and SignUp</string>
     <string name="no_account">Not have account? <b>SignUp</b></string>
     <string name="sign_up">Sign Up</string>
-    <string name="sign_up_here">Sign Up here</string><!--make signup bold-->
+    <string name="sign_up_here">Sign Up here</string>
+    <string name="title_activity_main">MainActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string><!--make signup bold-->
 </resources>
